--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <li><a href="#Curriculum Development">Curriculum Development</a></li>
   <li><a href="#Methods">Methods</a></li>
 </ul>
-    
+    <h1> Hunter Certification Program</h1>
     </body>
   
   
