--- a/home.html
+++ b/home.html
@@ -12,6 +12,9 @@
   <li><a href="#Methods">Methods</a></li>
 </ul>
     <h1> Hunter Certification Program</h1>
+    <p> This program is designed to prepare New York State certified middle and high school teachers to become effective teachers of Computer Science at all grade levels.
+
+</p>
     </body>
   
   
