--- a/AboutMe.html
+++ b/AboutMe.html
@@ -35,8 +35,19 @@
           </p>
           <p>
           <h4>
-          You are Out of Control!!
+            Please fill out the folowing form to find out more information.
           </h4>
+          <p>
+            <form action="/action_page.php">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="First"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value="Last"><br>
+            <label for="email">Email:</label><br>
+            <input type="text" id="eamil" name="Email" value="Email"><br><br>
+            <input type="submit" value="Submit">
+            </form> 
+        </p>
           </p>
       </div>
     </div> 
