--- a/AboutMe.html
+++ b/AboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title></title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="AboutMe.css" type="text/css" />
   </head>  
   <body>
     <div id="container">
